# E-Commerce

./: README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
dashboard/fixtures/: db_admin_fixture.json
dashboard/tests/: test_selenium_dashboard.py
demo/: apps.py  urls.py  views.py
demo/fixtures/: db_admin_fixture.json  db_brand_fixture.json  db_category_fixture.json  db_category_product_fixture.json  db_media_fixture.json  db_product_attribute_fixture.json  db_type_fixture.json
demo/management/commands/: load-fixtures.py
demo/templates/: base.html  categories.html  index.html  product_by_category.html  product_details.html
dninja/: api.py  apps.py  schema.py  urls.py
drf/: admin.py  apps.py  serializer.py  urls.py  views.py
ecommerce/: settings.py  urls.py
ecommerce/tests/: fixtures.py  selenium.py
inventory/: admin.py  apps.py  documents.py  models.py
inventory/fixtures/: db_product_attribute_fixture.json  db_product_attribute_value_fixture.json  db_product_attribute_values_fixture.json  db_product_type_attribute_fixture.json  db_stock_fixture.json
inventory/migrations/: 0001_initial.py
inventory/tests/: factories.py  test_db_fixtures.py
search/: documets.py  views.py
